<resources>
    <string name="app_name">Disfruta</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_empresa">Empresa</string>
    <string name="mensaje_progress_dialog">Cargando</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label_olvideclave" translatable="true">Olvide mi \ncontraseña</string>
    <string name="label_terminos_condiciones" translatable="true">Términos y condiciones</string>
    <string name="label_iniciarsesion">Iniciar Sesión</string>
    <string name="max_line_inputlogin">1</string>
    <string name="slide_txt_boton_omitir">Omitir</string>
    <string name="title_slide_1">HOLA</string>
    <string name="descrip_slide_1">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.</string>
    <string name="finalizar">Finalizar</string>
    <string name="siguiente">Siguiente</string>
    <string name="title_activity_detalle_proveedor">Detalle Proveedor</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="t_descripcion">Descripción</string>
    <string name="t_servicios">Servicios</string>
    <string name="detalle_reservas">Reservas</string>
    <string name="detalle_credito">Tarjetas de crédito</string>
    <string name="detalle_wifi">WI-FI</string>
    <string name="detalle_estacionamiento">Estacionamiento</string>
    <string name="t_galeria">Galería</string>
    <string name="title_activity_mapa_detalle">Map</string>
    <string name="text_terminos_condiciones">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. \n Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.  Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.  Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a,\n\n ultricies in, diam. Sed arcu. Cras consequat.  \n \nPraesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</string>
    <string name="terminos_condiciones">Términos y condiciones</string>
    <string name="action_llamar">Llamar</string>
    <string name="action_aceptar">Aceptar</string>
    <string name="terminos_condiciones_checkbox">Aceptar Terminos y condiciones</string>
    <string name="comunicar">Usted se comunicará con:</string>
    <string name="mesaDeAyuda">Mesa de Ayuda</string>
    <string name="telefono">01 517 1717</string>
    <string name="textMesaAyuda">
        Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto.
        Lorem Ipsum ha sido el texto de relleno
    </string>
    <string name="title_activity_principal_mapa">PrincipalMapaActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="filtro_categorias">Categorias</string>
    <string name="filtro_descuantos">Descuentos</string>
    <string name="filtro_distancia">Distancia</string>
    <string name="filtro_valoracion">Valoración</string>
    <string name="btn_borrar_filtro">Borrar filtro</string>
    <string name="dot">.</string>
    <string name="nombreUsuario">Nombres</string>
    <string name="apellidoUsuario">Apellidos</string>
    <string name="celularUsuario">Celular</string>
    <string name="dniUsuario">DNI</string>
    <string name="configuracionUsuario">Configuración de notificaciones</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="push">Push</string>
    <string name="mensaje">Mensaje</string>
    <string name="title_activity_mapa_inicio">Map</string>
    <string name="mensaje_terminis_y_condiciones">Aceptar los Términos y Condiciones</string>
    <string name="usuario_requerido">Usuario Requerido</string>
    <string name="contraseña_requerida">Contraseña Requerida</string>
    <string name="empresa_requerida">Empresa Requerida</string>
    <string name="tYc_requerida">Terminos y condiciones Requerida</string>
    <string-array name="lstDistritos">
        <item>Cercado de Lima</item>
        <item>Ate</item>
        <item>Barranco</item>
        <item>Breña</item>
        <item>Comas</item>
        <item>Chorrillos</item>
        <item>El Agustino</item>
        <item>Jesús María</item>
        <item>La Molina</item>
        <item>La Victoria</item>
        <item>Lince</item>
        <item>Magdalena del Mar</item>
        <item>Miraflores</item>
        <item>Pueblo Libre</item>
        <item>Puente Piedra</item>
        <item>Rimac</item>
        <item>San Isidro</item>
        <item>Independencia</item>
        <item>San Juan de Miraflores</item>
        <item>San Luis</item>
        <item>San Martin de Porres</item>
        <item>San Miguel</item>
        <item>Santiago de Surco</item>
        <item>Surquillo</item>
        <item>Villa María del Triunfo</item>
        <item>San Juan de Lurigancho</item>
        <item>Santa Rosa</item>
        <item>Los Olivos</item>
        <item>San Borja</item>
        <item>Villa El Savador</item>
        <item>Santa Anita</item>
    </string-array>
    <string name="titleDialog">Aviso!</string>
    <string name="acceptDialog">Aceptar</string>
    <string name="yesDialog">Si</string>
    <string name="notDialog">No</string>
    <string name="closeSessionConfirmation">¿Está seguro de cerrar sesión?</string>
</resources>