<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_llamar_mesa_ayuda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.gmdinnovacion.beneficiosgmd.disfruta.view.activity.LlamarMesaAyuda">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/arrow_close_btn"
            android:src="@drawable/ic_arrow_back_black_24dp" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_weight="1"
        android:id="@+id/scroll"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/terminos_condiciones"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/telefono"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comunicar"
            android:textColor="@color/text_terminos_condiciones"
            android:layout_marginTop="@dimen/margin_subtext_mesaayuda"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mesaDeAyuda"
            android:layout_marginTop="@dimen/margin_subtext_mesaayuda"
            android:textColor="@color/mesa_ayuda"
            android:textSize="@dimen/telefono"

            />

        <TextView
            android:id="@+id/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textColor="@color/telefono"
            android:layout_marginTop="@dimen/margin_subtext_mesaayuda"
            android:textSize="@dimen/telefono"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/textMesaAyuda"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_text_mesaayuda"
            android:textColor="@color/text_terminos_condiciones"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/textMesaAyuda"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_text_mesaayuda"
            android:textColor="@color/text_terminos_condiciones"
            />

    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/email_llamar_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_llamar"
        android:textStyle="bold"
        android:onClick="llamar"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:background="@color/orange_button_dark"
        android:layout_alignParentBottom="true"
        android:minHeight="?attr/listPreferredItemHeight"
        />
</RelativeLayout>
