<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmdinnovacion.beneficiosgmd.disfruta.view.activity.TerminosYCondiciones"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:id="@+id/scroll"
        android:layout_marginBottom="56dp"
        android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/terminos_condiciones"
                android:paddingLeft="@dimen/terminos_condiciones"
                android:paddingRight="@dimen/terminos_condiciones"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terminos_condiciones"
                    android:textSize="@dimen/terminos_condiciones_title"
                    android:layout_marginBottom="@dimen/tittle_terminos_margin"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="@dimen/text_terminos_size"
                    android:text="@string/text_terminos_condiciones"
                    android:id="@+id/textView" />


                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terminos_condiciones_checkbox"
                    android:id="@+id/checkBox"
                    android:layout_margin="16dp"
                    android:textColor="@color/text_terminos_condiciones"
                    android:buttonTint="@color/orange_button_dark"
                    android:theme="@style/SampleTheme"
                    />

            </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/email_aceptar_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/action_aceptar"
        android:textAllCaps="false"
        android:layout_alignBottom="@+id/scroll"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/orange_button_dark"
         />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:textSize="@dimen/texto_boton_naranja"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <ImageButton
            android:layout_width = "?attr/actionBarSize"
            android:layout_height = "?attr/actionBarSize"
            android:src="@drawable/ic_close_black_24dp"
            android:background = "?attr/selectableItemBackgroundBorderless"
            android:id="@+id/boton_toolbar_cerrar" />

    </android.support.v7.widget.Toolbar>
</RelativeLayout>
