<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@mipmap/background_login"
    tools:context="com.gmdinnovacion.beneficiosgmd.disfruta.view.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marg_image_login"
                    android:src="@mipmap/icon_login"
                    android:id="@+id/imageView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/label_iniciarsesion"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/size_title_login"
                    />
            </LinearLayout>

            <!--Linear Datos-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">
            <!--empresa-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/combo_empresas"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_empresa_login"
                    android:layout_marginBottom="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/size_promt_login"
                    android:text="Empresa"
                    android:drawableRight="@mipmap/ic_keyboard_arrow_down_white_24dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_empresa"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/size_promt_login"
                    android:text=""
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorAccent"
                    />

            </LinearLayout>

            <!--Usuario-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marg_textinput_login"
                android:textColorHint="@android:color/white"
                >

                <EditText
                    android:id="@+id/txt_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="@integer/max_lines_inputlogin"
                    tools:text="Usuario"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/size_promt_login"
                    android:text="avermes"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <!--Clave-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marg_textinput_login"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="@integer/max_lines_inputlogin"
                    android:text="Miercoles1416#"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/size_promt_login"
                    tools:text="Clave"/>

            </android.support.design.widget.TextInputLayout>

            <!--Terminos y condiciones-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_checkbox_login"
                    android:layout_marginTop="@dimen/marg_checkbox_login"
                    android:orientation="horizontal">
                    <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/terminos_y_condiciones"
                    android:textColor="@android:color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_terminos_condiciones"
                        android:linksClickable="true"
                        android:clickable="true"
                        android:id="@+id/txt_ver_terminocondiciones"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
                <!--Fin terminos y condiciones-->
                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marg_default"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:background="@color/orange_button_dark"/>

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_olvideclave"
                    android:id="@+id/olvideMiContraseña"
                    android:padding="@dimen/padd_olvidoclave_login"
                    android:visibility="gone"
                    android:gravity="center"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
